<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.FilmActivity">

    <ImageView
        android:id="@+id/film_imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bogatir" />
    <LinearLayout
        android:layout_marginTop="@dimen/text_title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/margin"
            android:id="@+id/title_textView"
            tools:text="@string/tools"
            android:layout_marginStart="@dimen/margin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/text_title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/margin"
            android:id="@+id/year_textView"
            tools:text="@string/tools"
            android:layout_marginStart="@dimen/margin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/text_title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/margin"
            android:id="@+id/country_textView"
            tools:text="@string/tools"
            android:layout_marginStart="@dimen/margin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/text_title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Жанр:"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/margin"
            android:id="@+id/style_textView"
            tools:text="@string/tools"
            android:layout_marginStart="@dimen/margin"/>
    </LinearLayout>

</LinearLayout>